--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2618,6 +2618,29 @@ input, select, textarea {
     
     }
 
+@media screen and (max-width: 1680px) {
+
+  	#header #main .avatar img {
+            display: block;
+            margin: 0 auto;
+            border-radius: 100%;
+            box-shadow: 0 0 0 0.3em #8f8f8f;
+            max-width: 20%;
+        }
+        #header #main {
+            padding: 3em 1em 2em 1em ;
+            width: 100%;
+        }
+    
+            #header#main .avatar:before {
+                left: -2em;
+                width: calc(100% + 4em);
+            }
+    
+    }
+
+	}
+
 @media screen and (max-width: 480px) {
 
     #header #main .avatar img {
