--- a/old/assets/sass/noscript.scss
+++ b/old/assets/sass/noscript.scss
@@ -3,24 +3,28 @@
 @import 'libs/mixins';
 @import 'libs/vendor';
 @import 'libs/breakpoints';
+@import 'libs/html-grid';
 
 /*
-	Identity by HTML5 UP
+	Helios by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Carousel */
 
-	body {
-		&:after {
-			display: none;
-		}
+	.carousel {
+		overflow-x: auto;
 	}
 
-/* Main */
+/* Header */
 
-	#main {
-		@include vendor('transform', 'none !important');
-		opacity: 1 !important;
+	body.homepage {
+		&.is-preload {
+			#header {
+				&:after {
+					opacity: 0;
+				}
+			}
+		}
 	}
